--- a/config/config.us.yml
+++ b/config/config.us.yml
@@ -1,23 +1,26 @@
-market: cn
+market: us
 
 data:
   start_years: 5
   end_date: "today"
   cache_dir: "cache"
   price_col: "close"
+  daily_endpoint: "us_daily"
+  basic_endpoint: "us_basic"
+  column_map:
+    trade_date: trade_date
+    ts_code: ts_code
+    close: close
+    vol: vol
+    amount: amount
 
 universe:
   symbols:
-    - "600519.SH"
-    - "601318.SH"
-    - "600036.SH"
-    - "000858.SZ"
-    - "000333.SZ"
-    - "600887.SH"
-    - "600276.SH"
-    - "601888.SH"
-    - "000001.SZ"
-    - "002415.SZ"
+    - "AAPL"
+    - "MSFT"
+    - "NVDA"
+    - "AMZN"
+    - "GOOGL"
   symbols_file: null
   min_symbols_per_date: 5
   min_listed_days: 0
