--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
-# Copy to .env and replace the placeholder before running the scripts.
+# Copy to .env and replace the placeholders before running the scripts.
+TUSHARE_API_KEY="replace-with-your-tushare-pro-token"
 TUSHARE_TOKEN="replace-with-your-tushare-pro-token"
 TUSHARE_TOKEN_2="replace-with-your-second-tushare-pro-token"
+RQDATA_USERNAME="your-user"
+RQDATA_PASSWORD="your-pass"
