--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ dependencies = [
   "pyyaml>=6.0",
   "python-dotenv>=1.0",
   "scikit-learn>=1.2",
+  "rqdatac",
+  "rqdatac-hk",
   "tushare>=1.2.89",
   "xgboost>=1.7",
 ]
