updated the training run algo

--- a/src/csxgb/config/hk.yml
+++ b/src/csxgb/config/hk.yml
@@ -85,6 +85,7 @@ eval:
   rebalance_frequency: "M"
   top_k: 5
   signal_direction: -1
+  signal_direction_mode: "fixed"
   transaction_cost_bps: 25
   embargo_days: null
   purge_days: null
@@ -96,6 +97,17 @@ eval:
     enabled: false
     n_runs: 3
     seed: 42
+  walk_forward:
+    enabled: true
+    n_windows: 3
+    test_size: null
+    step_size: null
+    anchor_end: true
+    backtest_enabled: true
+    permutation_test:
+      enabled: true
+      n_runs: 3
+      seed: 42
 
 backtest:
   enabled: true
@@ -104,6 +116,7 @@ backtest:
   transaction_cost_bps: 25
   trading_days_per_year: 252
   long_only: true
+  short_k: null
   benchmark_symbol: null
   exit_mode: "rebalance"
   exit_horizon_days: null
