--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,3 +45,10 @@ where = ["src"]
 
 [tool.setuptools.package-data]
 csxgb = ["config/*.yml"]
+
+[tool.pytest.ini_options]
+addopts = "-q --disable-warnings --maxfail=1 --cov=csxgb --cov-report=term-missing"
+markers = [
+  "integration: end-to-end or slower tests",
+  "slow: intentionally slow tests",
+]
